dhall/tests/type-inference/failure/unit/RecordProjectionDuplicateFields.txt
Type error: error: ProjectionDuplicateField
 --> <current file>:1:1
  |
1 | { x = 1 }.{ x, x }
  | ^^^^^^^^^^^^^^^^^^ ProjectionDuplicateField
  |
